--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
   padding: 0;
   margin: 0;
   font-family: "Raleway", sans-serif;
-
+  color: #FFF;
 }
 
+body,
+html {
+    min-height: 100vh;
+    height: 100%;
+}
