--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -1,4 +1,17 @@
-#welcome {
+#welcome {      /* ID da Div */
     text-align: center;
     max-width: 500px;
 }
+
+#welcome h2, #welcome p {
+    margin-bottom: 1rem;
+}
+
+#welcome p {
+    color: #8435de;
+}
+
+#welcome img {
+    margin-top: 2rem;
+}
+
