--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,11 +1,15 @@
 #question {      /* ID da Div */
     text-align: center;
     max-width: 500px;
+    background-color: #8435de;
+    border-radius: 1rem;
+    padding: 2rem;
 }
 
-#question h2, #question p {
+#question h2 {
     margin-bottom: 1rem;
 }
+
 
 #question p {
     color: #8435de;
